--- a/02_Cloud_1/05-s3.md
+++ b/02_Cloud_1/05-s3.md
@@ -22,16 +22,61 @@ S3 heeft verschillende storage classes waar je meer of minder betaald voor de op
 - etc
 
 ## Opdracht
+Topics covered
+By the end of this lab, you will be able to:
+* Create an S3 bucket and have others view a picture using a URL
+* Host a static website in S3
+
+**Exercise 1:**
+Start your sandbox lab and open the AWS console.
+Navigate to the S3 menu.
+Create new bucket with the following requirements:
+Region: Frankfurt (eu-central-1)
+Public access enabled (**select "ACL enabled"**)
+Upload a cat picture to your bucket.
+Share the object URL of your cat picture with a peer. Make sure they are able to see the picture.
+
+![op5-ex1-cat-pic](https://user-images.githubusercontent.com/4924632/146266740-adf25c9b-7f32-46ee-a780-4ab8593a2997.png)
+
+**Exercise 2:**
+Create new bucket with the following requirements:
+Region: 
+* Frankfurt (eu-central-1)
+* Public access enabled
+
+Upload the four files that make up AWS’ demo website.
+Enable static website hosting.
+
+Share the bucket website endpoint with a peer. Make sure they are able to see the website.
+
+*You can configure an Amazon S3 bucket to function like a website. This example walks you through the steps of hosting a website on Amazon S3.
+Step 1: Create a bucket
+Step 2: Enable static website hosting (under Properties)
+Step 3: Edit Block Public Access settings (remove all blocks)
+Step 4: Add a bucket policy that makes your bucket content publicly available (when creating the bucket, enable ACL)
+Step 5: Configure an index document (index.html)
+Step 6: Configure an error document (error.html)
+Step 7: Test your website endpoint, weblink
+Step 8: Clean up*
+
+Here is a screenshot of the demo website. I went back and deleted the bucket so as not to accrue unecessary charges for a learning exercise.
+
+![op5-ex2-demo-website](https://user-images.githubusercontent.com/4924632/146271608-7be2f630-cf9d-4c69-a092-18ff4b26775f.png)
+
+
 ### Gebruikte bronnen
-- https://aws.amazon.com/s3/
-- https://aws.amazon.com/s3/storage-classes/?nc=sn&loc=3
-- https://www.backblaze.com/blog/cloud-storage-durability-vs-availability/
-- https://wellarchitectedlabs.com/common/documentation/createnews3bucketandaddobjects/
+https://aws.amazon.com/s3/
+
+https://aws.amazon.com/s3/storage-classes/?nc=sn&loc=3
+
+https://www.backblaze.com/blog/cloud-storage-durability-vs-availability/
+
+https://wellarchitectedlabs.com/common/documentation/createnews3bucketandaddobjects/
+
+ex2:
+https://docs.aws.amazon.com/AmazonS3/latest/userguide/EnableWebsiteHosting.html
 
 ### Ervaren problemen
-- Ik had geen toegang tot mijn foto en kreeg foutmeldingen.
-    Ik heb gezocht op Google op de volgende termen 'AWS S3 no file access' en vond een site met een stappenplan hoe dit op te lossen. Ik was vergeten public access aan te zetten.
+ex1: I received an error message: access denied. It took me too long to try to enable public access once I had already created a bucket with ACL disabled. So I just went back and created another bucket with ACL enabled. This is easily done with only one image on the line. Obviously if you have hundreds of pictures on the line, then it would be easier to enable public access by tagging via the CLI.
 
 ### Resultaat
-Mijn teamgenoot heeft de kattenfoto op kunnen vragen.
-![screenshot van een kattenfoto](../00_includes/screenshot-s3.png)
