--- a/02_Cloud_1/06-ec2.md
+++ b/02_Cloud_1/06-ec2.md
@@ -65,10 +65,10 @@ Start your EC2 instance.
 Terminate your EC2 instance.Tip: you must first disable termination protection.
 
 ### Gebruikte bronnen
-
+https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/LaunchingAndUsingInstances.html
 
 ### Ervaren problemen
-This is where I would like to point out that halfway through exercise1, I received a notification, and my dashboard was updated and the console layout changed a bit.
+
 
 ### Resultaat
 
@@ -86,19 +86,14 @@ Step 7: Review Instance Launch and Select Key Pair
 ![op6-ex1-ec2-launched](https://user-images.githubusercontent.com/4924632/146362189-27f80138-e8fd-452d-8878-92d219f4558d.png)
 
 **Exercise 2: Verify http package installed on EC2*
-
 ![op-ex2-syslog-http-installation](https://user-images.githubusercontent.com/4924632/146363440-2898dcd1-9aa6-4721-bb24-91abd91f7ad2.png)
 
-**Exercise 3: Modify intances to .small and 10GiB*
-
+**Exercise 3: Modify intances to .small and 10GiB**
 -note use left-side menu bar to select "Volumes", and "Action" tab to modify volume from 8GiB to 10GiB
-
 ![op6-ex3-modify-EC2instance](https://user-images.githubusercontent.com/4924632/146366656-888b572d-d7e3-4313-b80f-028e964e231f.png)
 
-**Exercise 4: Terminate instance*
-
+**Exercise 4: Terminate instance**
 When not in use, terminate instance to save costs.
 -disable termination protection 
-
 ![op6-ex4-EC2terminated](https://user-images.githubusercontent.com/4924632/146367981-7acf6423-e2ac-4be7-8162-42bc732d09c2.png)
 
